@@ -23,7 +23,7 @@
         <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
         <maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>
         <maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
-        <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
+        <maven-gpg-plugin.version>3.0.1</maven-gpg-plugin.version>
 
         <mapstruct.version>1.3.1.Final</mapstruct.version>
         <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
@@ -298,13 +298,15 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven-surefire-plugin.version}</version>
                     <configuration>
+                        <!-- 这里参数可能影响使用者，暂时约定需要带 Test 后缀 -->
                         <includes>
                             <include>**/*Test.java</include>
                             <include>**/*Test.groovy</include>
                             <include>**/*Spec.*</include>
                         </includes>
                         <forkMode>always</forkMode>
-                        <argLine>-Xms256m -Xmx256m -XX:PermSize=64m -XX:MaxPermSize=64m -Dfile.encoding=utf-8</argLine>
+                        <!-- 这里的max参数可能导致使用者 OOM，暂不添加最大值 -->
+                        <argLine>-Xms256m -XX:MetaspaceSize=128m -Dfile.encoding=utf-8</argLine>
                         <argLine>--add-modules java.xml.bind</argLine>
                         <argLine>--add-modules java.activation</argLine>
                         <argLine>--add-opens=java.base/java.lang=ALL-UNNAMED --illegal-access=warn</argLine>
